--- a/2101.08086/main.tex
+++ b/2101.08086/main.tex
@@ -1,13 +1,49 @@
   \documentclass[%
- reprint,
+ 12pt,
  superscriptaddress,
  amsmath,
  amssymb,
- aps,
+ onecolumn,
  longbibliography
 ]{revtex4-2}
 
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
 
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 \usepackage{subcaption}
 \captionsetup{compatibility=false}
 \usepackage{graphicx}% Include figure files
@@ -21,13 +57,6 @@
 \usepackage{xcolor}
 \usepackage{tikz}
 \usetikzlibrary{quantikz}
-\usepackage{hyperref}
-\hypersetup{
-    colorlinks=true,
-    linkcolor=blue,
-    filecolor=blue,   
-    urlcolor=blue,
-}
 
 
 \usepackage{blochsphere}
@@ -42,7 +71,7 @@
 
 
 
-\date{\today}
+\date{21 Jan 2021}
 
 \begin{document}
 
@@ -103,11 +132,11 @@ In this regard, there has been recent progress in providing a razor-sharp witnes
 
 	\begin{figure*}
 	    \begin{subfigure}{.49\textwidth}
-    		\includegraphics[width=1.0\columnwidth]{Picture1}\par\medskip
+    		\includegraphics[width=0.5\columnwidth]{Picture1}\par\medskip
     		\textit{Linear set-up.\label{fig:QGEMlinear1}}\par\medskip
 		\end{subfigure}
 	    \begin{subfigure}{.49\textwidth}
-    		\includegraphics[width=1.\columnwidth]{para_topdown.png}\par\medskip
+    		\includegraphics[width=.5\columnwidth]{para_topdown.png}\par\medskip
     		\textit{Parallel set-up. \label{fig:QGEMpara1}}\par\medskip
 		\end{subfigure}
 		\caption{Schematic representation of the experiment, shown here using qubits. On the left, the liner set-up presented in \cite{Bose2017, Marletto2017, Kamp2020}. On the right, a schematic for the parallel set-up initially presented in \cite{Nguyen2019}}\par\medskip \label{fig:QGEMinit}
@@ -132,7 +161,7 @@ Where: $\phi_{pq}$ is defined by:
 	\begin{figure}
 	\centering
 	    \par\medskip
-		\includegraphics[width=1.0\columnwidth]{general_5.png}\par\medskip
+		\includegraphics[width=0.5\columnwidth]{general_5.png}\par\medskip
 		\caption{Top view for generalised QGEM model showing the maximum spread of the qudits (Distance $C_{pq}$ in red). The parametrization of the set-up is controlled by $\theta_1$ and $\theta_2$. \label{fig:generalised set-up}}
 	\end{figure}
 \indent The value $C_{pq}$ for each superposition pair can be derived using simple trigonometric rules and is given by
@@ -173,11 +202,11 @@ From which it follows that more entanglement can be produced from higher dimensi
 	\begin{figure*}
 	    \begin{subfigure}{.49\textwidth}
 	        \textit{Parallel set-up}\par\medskip
-    		\includegraphics[width=1.\columnwidth]{para_qudits.png}\par\medskip
+    		\includegraphics[width=.5\columnwidth]{para_qudits.png}\par\medskip
 		\end{subfigure}
 	    \begin{subfigure}{.49\textwidth}
 	        \textit{Linear set-up}\par\medskip
-    		\includegraphics[width=1.\columnwidth]{linear_qudits.png}\par\medskip
+    		\includegraphics[width=.5\columnwidth]{linear_qudits.png}\par\medskip
 		\end{subfigure}
 		\caption{Entanglement entropy scalling with the state dimension for $D=2$ to $D=6$. On the left, we present the results for the parallel set-up, on the right we present the results for the linear set-up.} \label{para_qudits}
 	\end{figure*}
@@ -204,7 +233,7 @@ In the parallel qubit case, this witness is simply \cite{Chevalier:2020uvv}:
 \indent There is currently no general witness construction strategy for detecting PPTES (also known as entangled bound states) and research is focused on designing witnesses specific to certain families of states. Thankfully bound entanglement represents only a small proportion of all entangled states, and remains unlikely to occur in the proposed experiment. \\
 \indent We computed the PPT entanglement witness expectation value for $D$ dimensional qudits with $D=2$ to $6$. The results are presented in Figure \ref{fig:pptEW_qudit_para} for both the parallel and linear cases.\\
 	\begin{figure}
-        \includegraphics[width=1.\columnwidth]{EW_para_qudits.png}\par\medskip
+        \includegraphics[width=.5\columnwidth]{EW_para_qudits.png}\par\medskip
 		\caption{Expectation value of PPT entanglement witness for the parallel set-up with state dimension for $D=2$ to $D=6$}\par\medskip \label{fig:pptEW_qudit_para}
 	\end{figure}
 \indent The expectation value of the PPT entanglement witness is nearing $-0.148$ at $\tau=2.5s$ for qubits. The witness values are slightly higher for higher dimensional qudits, echoing the findings of the entanglement entropy test. These witnesses also appear to be finest for the set of states that are produced by each set-up. A witness $\mathcal{W}_A$ is set to be finer than another witness $\mathcal{W}_B$ if it detects as entangled all the states detected by $\mathcal{W}_B$ and at least one more (see Ref. \cite{Lewenstein2000}). In this case, the witnesses computed are clearly able to detect all entangled states produced (for any $\tau$) albeit with values very close to zero for low values of $\tau$. \\
@@ -266,7 +295,7 @@ as such, following the model described above, decoherence is incorporated as:
 %	
 	\begin{figure}
 	\centering
-		\includegraphics[width=1.\columnwidth]{EW_para_qudits_deco.png}
+		\includegraphics[width=.5\columnwidth]{EW_para_qudits_deco.png}
 	    \caption{Expectation value of PPT entanglement witness as a function of the decoherence rate in the parallel set-up and with $D$ ranging from 2 to 6.} \label{fig:qudit_deco}
 		\par\medskip
 	\end{figure}
@@ -275,11 +304,11 @@ as such, following the model described above, decoherence is incorporated as:
 	\begin{figure*}
 	    \begin{subfigure}{.49\textwidth}
 	    	\textit{$\gamma = 0.1$Hz}\par\medskip
-    		\includegraphics[width=1.\columnwidth]{EW_deco_time_01.png}\par\medskip
+    		\includegraphics[width=.5\columnwidth]{EW_deco_time_01.png}\par\medskip
 		\end{subfigure}
 	    \begin{subfigure}{.49\textwidth}
 	    	\textit{$\gamma = 0.125$Hz}\par\medskip
-    		\includegraphics[width=1.\columnwidth]{EW_deco_time_0125.png}\par\medskip
+    		\includegraphics[width=.5\columnwidth]{EW_deco_time_0125.png}\par\medskip
 		\end{subfigure}
 	    \caption{Entanglement witness expectation value over time for the parallel set up and with $D$ ranging from 2 to 6. We present two different possible values of $\gamma$: 0.1Hz, and 0.125Hz}
 	\end{figure*}
@@ -298,36 +327,36 @@ as such, following the model described above, decoherence is incorporated as:
 \indent The plots presented in this section are an average over many single runs of each numerical experiment simulation. As such, these should be representative of a typical run of the experiment. The conclusions drawn from these are only meant to indicate the order of magnitude of the number of measurements required in order to define the most adequate experiment set-up. \\
 \indent We first describe the result obtained from the experiment simulation with qubits. The simulation is first run comparing the linear and parallel set-ups with no decoherence (Figure \ref{fig:expsimqubits} followed by plots of the simulation for increasing decoherence rate $\gamma$  in Figure \ref{fig:expsim_qubits_deco}. We have used $\mathcal{W}_{ppt}$ with full basis decomposition in this first experiment simulations, holding $\Delta x = 250 \mu m$ and $\tau = 2.5s$.\\
 	\begin{figure}
-		\includegraphics[width=1.\columnwidth]{EW_confidence_v18.png}\par\medskip
+		\includegraphics[width=.5\columnwidth]{EW_confidence_v18.png}\par\medskip
 	    \caption{QGEM experiment simulation - linear and parallel set-ups (no decoherence) - Expected level of confidence (probability of the witness value actually being negative) in the qubit case. We added the case in which the parallel witness is used for the linear set-up showcasing the benefits of having a lower number of terms to compute}\label{fig:expsimqubits}
 	\end{figure}
 \indent As we can see from Figure \ref{fig:expsimqubits}, with no decoherence, it takes about 500 measurements to reject the hypothesis that the two states are not entangled at a 99.9\% confidence level in the parallel case and at least 3,000 measurements for the linear set-up.  Using the witness derived in the parallel set-up marginally improves the results of the linear case, although not sufficient for it to be comparable to the parallel version of the experiment. This further confirms that the parallel set-up will be preferable in a real experiment and we, therefore, discard the linear set-up in the remainder of the simulations. \\
 \indent We can expect that incorporating decoherence will increase the number of measurements required as it pushes the expectation value of $\mathcal{W}_{ppt}$ upward. The result of the qubit experiment simulations with decoherence are presented in Figure \ref{fig:expsim_qubits_deco}. It illustrates the rapid increase in the number of measurements required as the decoherence rate is raised. For $\gamma=0.05$Hz, the parallel set-up still only require about $\sim 2,000$ measurements. This figure goes up to $\sim 6,000$ measurements for $\gamma = 0.075$Hz. At $\gamma=0.1$Hz, the experiment would required at least $25,000$ measurements. At this decoherence rate, qubits have fewer negative expectation values for $\mathcal{W}_{ppt}$ than some qudits, and at decoherence rate above $\gamma = 0.12$Hz, the expectation value of the witness is positive (that is, no entanglement is detected and therefore the results are not plotted). \\
 	\begin{figure}
-    		\includegraphics[width=1.\columnwidth]{EW_confidence_qubits_deco.png}\par\medskip
+    		\includegraphics[width=.5\columnwidth]{EW_confidence_qubits_deco.png}\par\medskip
 	    \caption{QGEM Experiment simulation with qubits - Confidence levels for three decoherence level (0.05Hz, 0.075Hz and 0.1Hz) as a function of the number of measurements available. Here the witness as expectation value of -0.074, -0.043, and -0.016, respectively} \label{fig:expsim_qubits_deco}
 	\end{figure}
 \indent We repeated the experiment simulations as described above with differing decoherence rates in the case of qudits. We have used the $D=6$ qudit case for illustration. For brevity, we will denote them as 6-qudits, and use an analogous nomenclature for other dimensions. As for the qubits simulations, all the experiments use the parallel set-up, $\Delta x = 250 \mu$m and $\tau = 2.5$s.\\
 	\begin{figure}
-    		\includegraphics[width=1.\columnwidth]{EW_confidence_6qudits_deco.png}\par\medskip
+    		\includegraphics[width=.5\columnwidth]{EW_confidence_6qudits_deco.png}\par\medskip
 	    \caption{QGEM Experiment simulation with D=6 qudits - Confidence levels for three decoherence level (0.05Hz, 0.075Hz and 0.1Hz) as a function of the number of measurements available. Here the witness as expectation value of -0.045, -0.032, and -0.021, respectively} \label{fig:expsim_qubits_deco_6d}
 	\end{figure} 
 \indent As expected, for the 6-qudits case, the number of measurements required is significantly higher. This is primarily due to the large number of additional terms to compute. Our results are presented in Figure \ref{fig:expsim_qubits_deco_6d} and show that for $\gamma = 0.05$Hz, over 200,000 measurements would be needed, while nearly 400,000 would be required if $\gamma = 0.075$Hz, and about 600,000 for $\gamma = 0.1$Hz. \\
 \indent One last test that is worth considering is the situation in which grouping of terms is allowed (this is subject to being able to produce the relevant measurement bases experimentally, as mentioned in Section \ref{sec:EW}). \\
 \indent Figure \ref{fig:expsim_qubits_grouped} presents the results for the qubits case. We can already see the drastic reduction in the total number of measurements required, resulting from the reduction of terms to measure from 4 (in reality 3 since the identity term does not need to be measured), to 1. Less than 1,000 measurements and 2,000 measurements are necessary when $\gamma = 0.05$Hz and $\gamma = 0.075$Hz, respectively. Similarly, only about 12,000 measurements is required if $\gamma = 0.1$Hz.\\
 	\begin{figure}
-    		\includegraphics[width=1.\columnwidth]{EW_confidence_qubits_deco_grouped.png}\par\medskip
+    		\includegraphics[width=.5\columnwidth]{EW_confidence_qubits_deco_grouped.png}\par\medskip
 	    \caption{QGEM Experiment simulation with qubits (operators grouped) - Confidence levels for three decoherence level (0.05Hz, 0.075Hz and 0.1Hz) as a function of the number of measurements available. Here the witness as expectation value of -0.074, -0.043, and -0.016, respectively} \label{fig:expsim_qubits_grouped}
 	\end{figure} 
 \indent A very similar pattern can be seen in the qudit case. The results for 6-qudits are presented in Figure \ref{fig:expsim_6qudits_grouped}. number of measurements are drastically reduced when operators are grouped. About 25,000 measurements are needed for $\gamma = 0.05$Hz, while $\gamma = 0.075$Hz requires less than 40,000 measurements, and $\gamma = 0.1$Hz less than 80,000.
 	\begin{figure}
-    	\includegraphics[width=1.\columnwidth]{EW_confidence_6qudits_grouped.png}\par\medskip
+    	\includegraphics[width=.5\columnwidth]{EW_confidence_6qudits_grouped.png}\par\medskip
 	    \caption{QGEM Experiment simulation with 6-qudits (operators grouped) - Confidence levels for three decoherence level (0.05Hz, 0.075Hz and 0.1Hz) as a function of the number of measurements available. Here the witness as expectation value of -0.045, -0.032, and -0.021, respectively} \label{fig:expsim_6qudits_grouped}
 	\end{figure} 
 
 \indent There are clearly no reasons to use high dimensional qudits unless the decoherence rate is such that the entanglement witness for qubits always has a positive expectation value. In the experiment setting, we have assumed, this happens at about $\gamma \approx 0.12$Hz. We therefore present in Figure \ref{fig:expsim_qudits_125} an experiment simulation showing how 6-qudits perform in the window of decoherence rate in which high dimensional qudits become relevant.
 	\begin{figure}
-    		\includegraphics[width=1.\columnwidth]{EW_confidence_6qudits_deco_125.png}\par\medskip
+    		\includegraphics[width=.5\columnwidth]{EW_confidence_6qudits_deco_125.png}\par\medskip
 	    \caption{QGEM Experiment simulation with 6-qudits - Confidence levels for a decoherence rate of 0.125Hz as a function of the number of measurements available in a case where the operators are grouped, and not.} \label{fig:expsim_qudits_125}
 	\end{figure} 
 \indent At $\gamma = 1.25$Hz, it is clear that the 6-qudits states still require a very large number of measurements in order to reject the null hypothesis. However, grouping the operators to measure in joint measurement bases allow reducing the number of measurements required from nearly 2,000,000 to slightly above 200,000. It is worth noting that at this rate, the qubits case would not work as decoherence pushes the expectation value of the witness above zero, and the 4-qudits and 5-qudits case are too close to zero to reach confidence of $99.9\%$ in a realistic number of measurements. \\
@@ -592,7 +621,7 @@ Nguyen and Bernards provide a threshold value for the phase of the parallel
 \indent The heat-map presented in Figure \ref{heatmap2} displays the entanglement entropy for all possible combinations of $\theta_1$ and $\theta_2$ as defined in Figure \ref{fig:generalised set-up}, having set $\Delta x = 250\mu$m and $\tau = 2.5$s. The dark blue dot represents the two possible parallel set-ups ($\theta_1 = \frac{3\pi}{2}, \theta_2=\frac{\pi}{2}$ and $\theta_1 = \frac{\pi}{2}, \theta_2=\frac{3\pi}{2}$), while the yellow dot represents the linear set-up ($\theta_1 = \theta_2 = 0$). On the heat-map, blue represents low entanglement entropy while white represents entanglement entropy nearing 1.0. It appears from this figure that higher entanglement entropy could possibly be achieved with alternative set-ups; however, this is without considering that some combinations result in some superposition instances being under $200 \mu m$ and therefore subject to non-negligible Casimir-Polder forces (represented by the shaded areas on the figure).
 	\begin{figure}
 	\centering
-	    \includegraphics[width=1.0\columnwidth]{heatmap_VNE_angles_grays.png}\par\medskip
+	    \includegraphics[width=0.5\columnwidth]{heatmap_VNE_angles_grays.png}\par\medskip
 	    \caption{Entanglement entropy for all possible combinations of $\theta_1$ and $\theta_2$. The areas of reduced contrast (the region around the center $+$) are forbidden based on the requirement that the states do not come too close.}\label{heatmap2}
 	\end{figure}
 
@@ -601,7 +630,7 @@ Nguyen and Bernards provide a threshold value for the phase of the parallel
 \indent Figure \ref{fig:superposition_width} shows that a larger superposition width results in faster entanglement entropy growth. To illustrate this point we can consider the phases for the qudit parallel set-up: $\phi_{pq}$ is smaller or equal to $\phi$, reaching equality at $\Delta x=0$m, as $\Delta x$ increases, $\phi_{pq}$ decreases resulting in all the phase factors $\Delta_{\phi_{pq}}$ to become more negative than they already are and as such accelerating entanglement generation. 
     \begin{figure}
 	\centering
-	    	\includegraphics[width=1.0\columnwidth]{VNE_delta_x_comp.png}
+	    	\includegraphics[width=0.5\columnwidth]{VNE_delta_x_comp.png}
 	    	\caption{Entanglement entropy for the parallel and linear set-ups in the qubit case as a function of the superposition width ($\Delta x$)}\par\medskip \label{fig:superposition_width}
 	\end{figure}
 
@@ -610,7 +639,7 @@ Nguyen and Bernards provide a threshold value for the phase of the parallel
 
 	\begin{figure}
 	\centering
-		\includegraphics[width=1.0\columnwidth]{para_qudits_scaling.png}
+		\includegraphics[width=0.5\columnwidth]{para_qudits_scaling.png}
 	    \caption{Entanglement entropy as a function of time for $D$ ranging from 2 to 6. In this case, we have scaled $\Delta x$ to the number of dimensions} \label{fig:scaling}
 	\end{figure}
 
@@ -639,7 +668,7 @@ As such, the analysis allows to conclude that:
 
 	\begin{figure}
 	\centering
-	    \includegraphics[width=1.0\columnwidth]{EW_comparison.png}\par\medskip
+	    \includegraphics[width=0.5\columnwidth]{EW_comparison.png}\par\medskip
 	\caption{Expectation value of PPT and Vicinity entanglement witnesses as a function of time in the qubit case}\par\medskip \label{fig:EW_comp}
 	\end{figure}
 
@@ -670,7 +699,7 @@ As such, the analysis allows to conclude that:
 \indent In the original paper, Bose et al. suggest an experiment run-time of $\tau=2.5s$. In this appendix, We consider a simple way to estimate which run-time produce the highest resilience to decoherence (which run-time results in the expectation value of the entanglement witness reaching $0$ for the highest decoherence rate). Figure \ref{fig:deco_para_runtime2} presents the case of qubits, while Figure \ref{fig:deco_para_runtime6} present the case of 6-dimensional qudits. 
 	\begin{figure}
 	\centering
-		\includegraphics[width=1.0\columnwidth]{EW_para_deco_diff_time_d2.png}\par\medskip
+		\includegraphics[width=0.5\columnwidth]{EW_para_deco_diff_time_d2.png}\par\medskip
 	    \caption{Expectation value of PPT entanglement witness for different runtime of the experiment and as a function of the decoherence rate in the case $D=2$}\label{fig:deco_para_runtime2}
 	\textit{}
 	\end{figure}
@@ -678,7 +707,7 @@ As such, the analysis allows to conclude that:
 \indent On the qubit figure we can that additional time as little impact on how high the decoherence rate can be allowed to be. It does, however, offer more negative expectation values for the entanglement witness. If the experiment decoherence rate is estimated, one can then verify whether additional time can reduce the overall number of measurements required.
 	\begin{figure}
 	\centering
-		\includegraphics[width=1.0\columnwidth]{EW_para_deco_diff_time_d6.png}\par\medskip
+		\includegraphics[width=0.5\columnwidth]{EW_para_deco_diff_time_d6.png}\par\medskip
 		\caption{Expectation value of PPT entanglement witness for different runtime of the experiment and as a function of the decoherence rate in the case $D=6$}\label{fig:deco_para_runtime6}
 	\textit{}
 	\end{figure}	
