--- a/2101.07884/QFT-Supervene.tex
+++ b/2101.07884/QFT-Supervene.tex
@@ -6,12 +6,50 @@
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{latexsym}
-\usepackage{hyperref}
 \usepackage{enumitem}
 \usepackage{graphicx}
 \usepackage[export]{adjustbox}
 \usepackage{natbib}
-\textheight 8.5in \textwidth 6.5in \oddsidemargin 0in \topmargin -.35in
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 
 \newcommand{\sect}[1]{\vspace{10pt} \noindent {\bf #1} {\vspace{6pt}}}
 \newcommand{\point}[1]{\begin{quote} \textit{#1} \end{quote}}
@@ -44,7 +82,7 @@
 \newcommand{\et}{{\rm e}}
 
 \begin{document} 
-
+\date{19 Jan 2021}
 \title{The Quantum Field Theory on Which \\ the Everyday World Supervenes}
 
  \author{Sean M. Carroll\\
