--- a/hep-th-9808176/GBprc.tex
+++ b/hep-th-9808176/GBprc.tex
@@ -1,15 +1,9 @@
 
-\documentstyle[12pt,epsf]{report}
+\documentclass[12pt,epsf]{report}
 \makeatletter
 \@addtoreset{equation}{section}
 \makeatother
 
-\oddsidemargin 0.2cm
-\topmargin -1.5cm \headheight 12pt \headsep 25pt   
-\footheight 12pt \footskip
-75pt
-\textheight 21.5cm \textwidth 16cm
-\parindent 1.0cm  \baselineskip 1.6ex
 
 %\newtheorem{assumption}{Assumption}
 
@@ -57,7 +51,6 @@ Caroline, Andrew, Matthew, Ian and Michael}
 \tableofcontents
 \listoffigures
 \listoftables
-\setlength{\baselineskip}{5ex}
 
 \input notemacros
 
