--- a/hep-th-9808176/GBprc.tex
+++ b/hep-th-9808176/GBprc.tex
@@ -3,7 +3,45 @@
 \makeatletter
 \@addtoreset{equation}{section}
 \makeatother
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
 
+% these include amsmath and that can cause trouble in older docs.
+%\input{../helpers/cmrsum}
+%\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+\usepackage{graphicx}
 
 %\newtheorem{assumption}{Assumption}
 
@@ -620,8 +658,7 @@ Goldstone boson.
 
 
 \begin{figure}
-\epsfbox[-70 670 650 670]{RIscat.eps}
-\vspace{1.5in}
+\includegraphics{RIscat.eps}
 \caption{The Feynman graphs which describe $\Scr-\Sci$
 scattering at tree level. Solid lines denote $\Scr$ and
 dashed lines represent $\Sci$.}
@@ -3369,8 +3406,7 @@ In this approximation the neutron decay rate depends only
 on the two unknown constants, $F_1(0)$ and $G_1(0)$.
 
 \begin{figure}
-\epsfbox[-70 670 650 670]{NME.eps}
-\vspace{1in}
+\includegraphics{NME.eps}
 \caption{The Feynman graphs which give the dominant nucleon
 matrix elements of the Noether currents in the low-energy
 effective theory. Solid lines represent nucleons, and
@@ -3966,7 +4002,7 @@ symmetry-breaking interactions of the scalar potential,
 however, since for these $k = 0$ and $i \geq 4$.
 
 \begin{figure}
-\epsfbox[-70 670 650 670]{Piscat.eps}
+\includegraphics{Piscat.eps}
 \vspace{1in}
 \caption{The Feynman graphs which give the dominant
 contributions to pion-pion scattering in the low-energy
@@ -4234,8 +4270,7 @@ pictured in Fig.~3.1.
 
 
 \begin{figure}
-\epsfbox[30 740 650 740]{FvsAF.eps}
-\vspace{1in}
+\includegraphics{FvsAF.eps}
 \caption{The Distinction Between Ferromagnets (F) and
 Antiferromagnets (AF).}
 \end{figure}
@@ -5172,8 +5207,7 @@ superconducting electrons are taken.
 
 
 \begin{figure}
-\epsfbox[-40 700 650 700]{Pdiag.eps}
-\vspace{2.4in}
+\includegraphics{Pdiag.eps}
 \caption{A typical Temperature--{\it vs}--Doping phase
 diagram for a high-\Tc\ system.}
 \end{figure}
