--- a/hep-ph-9812468/korea.tex
+++ b/hep-ph-9812468/korea.tex
@@ -1,9 +1,50 @@
 %-----------------------------------------------
 %
-\documentstyle[sprocl,12pt]{article}
+\documentclass[12pt]{article}
 
 \input epsf.tex
 \input notemacros.tex
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+
 %
 %The style file (sprocl.sty) must be in the same directory
 %like the LaTeX-file.
@@ -86,17 +127,17 @@
 \def\osc{{\rm osc}}
 
 \begin{document}
-\rightline{hep-ph/9812468}
-\rightline{McGill-98/38}
-\vspace{10mm}
 \title{A Goldstone Boson Primer}
 \author{C.P. Burgess}
-\address{Physics Department, McGill University, 3600 University Street,\\
-Montr\'eal, Qu\'ebec, Canada, H3A 2T8.}
-
+%\address{Physics Department, McGill University, 3600 University Street,\\
+%Montr\'eal, Qu\'ebec, Canada, H3A 2T8.}
+\date{1 Apr 1999}
 \maketitle
+\rightline{hep-ph/9812468}
+\rightline{McGill-98/38}
 
-\abstracts{These lectures are an extremely condensed 
+\begin{abstract}
+These lectures are an extremely condensed 
 version of the theory of Goldstone bosons, with general
 features illustrated using a simple model. A more comprehensive 
 version of these lectures, which includes a general discussion
@@ -104,7 +145,8 @@ of effective theories of Goldstone bosons,
 including applications to the low-energy behaviour of
 pions, spin waves (in antiferromagnets and ferromagnets), and to
 the $SO(5)$ proposal for high-$T_c$ superconductors may be
-found in {\tt hep-th/9808176}.}
+found in {\tt hep-th/9808176}.
+\end{abstract}
 
 \section{Introduction}
 
