--- a/hep-ph-0503172/EWSB1.tex
+++ b/hep-ph-0503172/EWSB1.tex
@@ -4,19 +4,25 @@
 \usepackage[usenames,dvips]{color}
 \usepackage{rotating}
 
-\oddsidemargin 0.26cm
-\evensidemargin 0.26cm
-\marginparwidth 68pt
-\marginparsep 10pt
-\topmargin 0.cm
-\headheight 0pt
-\headsep 0pt
-\footskip 25pt
-\textheight 22.5cm
-\textwidth 16.5cm
-\columnsep 10pt
-\columnseprule 0pt
-%
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}%
 \def\red{\color{Red}}
 \def\blue{\color{Blue}}
 \def\green{\color{ForestGreen}}
@@ -45,48 +51,17 @@
 \newcommand{\bH}{\blue{$H$}}
 \newcommand{\ib}{{\it ibid.\ }}
 %
-\baselineskip=17pt
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \thispagestyle{empty}
 
-\hfill LPT--Orsay--05--17
 
-\hfill March 2005
+\title{The Anatomy of Electro--Weak Symmetry Breaking\\
+Tome I: The Higgs boson in the Standard Model}
 
-\vspace*{.5cm}
+\author{Abdelhak DJOUAD}
 
-\begin{center}
-
-
-{\sc\Large\bf The Anatomy of Electro--Weak Symmetry Breaking}
-
-\vspace{0.5cm}
-
-{\large\sc\bf Tome I: The Higgs boson in the Standard Model}
-
-\vspace{0.7cm}
-
-{\sc\large Abdelhak DJOUADI} 
-\vspace*{7mm} 
-
-Laboratoire de Physique Th\'eorique d'Orsay, UMR8627--CNRS,\\
-Universit\'e Paris--Sud, B\^at. 210, F--91405 Orsay Cedex, France. 
-\vspace*{2mm}
-
-
-Laboratoire de Physique Math\'ematique et Th\'eorique, UMR5825--CNRS,\\
-Universit\'e de Montpellier II, F--34095 Montpellier Cedex 5, France. 
-\vspace*{2mm}
-
-E--mail : {\tt Abdelhak.Djouadi@cern.ch}
-%\vspace*{1mm}
-
-%File also at : {\tt http://www.cern.ch/djouadi/EWSB-anatomy}
-\vspace*{2mm}
-
-\end{center} 
-
-\vspace*{5mm} 
+\date{March 2005}
+\maketitle
 
 \begin{abstract} 
 
@@ -99,15 +74,14 @@ future lepton colliders are described in detail.
 
 \begin{figure}[!h]
 \begin{center}
-\vspace*{-1.8cm}
 \hspace*{-2.2cm}
 \mbox{
-\epsfig{file=brA.ps,width=9.3cm}\hspace*{-4.3cm}
-\epsfig{file=ppA.ps,width=9.3cm}\hspace*{-4.3cm}
-\epsfig{file=eeA.ps,width=9.3cm}
+\epsfig{file=brA.ps,width=8.3cm}\hspace*{-3.3cm}
+\epsfig{file=ppA.ps,width=8.3cm}\hspace*{-3.3cm}
+\epsfig{file=eeA.ps,width=8.3cm}
 } 
 \end{center}
-\vspace*{-6.8cm}
+\vspace*{-5.8cm}
 \begin{center}
 \nn \small{\it 
 The decay branching ratios of the Standard Model Higgs boson and its production 
@@ -120,15 +94,9 @@ cross sections in the main channels at the LHC and at a 500 GeV $\ee$ collider.}
 
 \setcounter{page}{2}
 
-\baselineskip=16.7pt
 \tableofcontents
 
-\vspace*{.3cm}
-
-\hspace*{.1cm} {\bf References} \hfill {\bf 295} 
-
 \newpage
-\baselineskip=17pt
 
 \include{in-sm}
 
@@ -142,6 +110,8 @@ cross sections in the main channels at the LHC and at a 500 GeV $\ee$ collider.}
 \include{./sm3/sec3}
 
 \include{./sm4/sec4}
+
+\section{References}
 
 \include{bib-sm}
 
