--- a/hep-ph-0503172/sm1/sec1.tex
+++ b/hep-ph-0503172/sm1/sec1.tex
@@ -982,7 +982,7 @@ the three--gluon vertex has also been tested at LEP in four jet events.} and in
 deep inelastic scattering; for a review, see Refs.~\cite{alphas-review,PDG}. The most
 reliable results have been obtained at LEP where several methods can be used:
 inclusive hadronic rates in $Z$ decays [$R_\ell, \sigma^0_{\rm had}$ and 
-$\Gamma_Z$, see §1.2.1 later], inclusive rates in hadronic $\tau$ 
+$\Gamma_Z$, see section 1.2.1 later], inclusive rates in hadronic $\tau$ 
 decays, event shapes and jet rates in multi--jet production. The world average 
 value is given by \cite{PDG}
 \beq
