--- a/hep-ph-0503172/EWSB1.tex
+++ b/hep-ph-0503172/EWSB1.tex
@@ -18,7 +18,7 @@ bookmarksopen=true,
 bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
-\usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\usepackage[papersize={7.2in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
 \linespread{1.05}
 \sloppy
 \raggedbottom
@@ -27,6 +27,10 @@ bookmarksopenlevel=10
 \def\blue{\color{Blue}}
 \def\green{\color{ForestGreen}}
 %
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+
 \begin{document}
 
 \newcommand{\lsim}{\raisebox{-0.13cm}{~\shortstack{$<$ \\[-0.07cm] $\sim$}}~}
@@ -98,10 +102,9 @@ cross sections in the main channels at the LHC and at a 500 GeV $\ee$ collider.}
 
 \newpage
 
-\include{in-sm}
+\setcounter{section}{-1}
 
-\setcounter{section}{0}
-\renewcommand{\thesection}{\arabic{section}}
+\include{in-sm}
 
 \include{./sm1/sec1}
 
