--- a/hep-ph-0503172/in-sm.tex
+++ b/hep-ph-0503172/in-sm.tex
@@ -1,6 +1,5 @@
-\setcounter{section}{-1} 
 
-\section{\hspace*{-.5cm} Pr\'eambule}
+\section{Preamble}
 
 \subsubsection*{A short praise of the Standard Model}
 
