--- a/2101.11052/energy-conservation-in-QM.tex
+++ b/2101.11052/energy-conservation-in-QM.tex
@@ -1,8 +1,46 @@
-\documentclass[aps,prd,onecolumn,nofootinbib,notitlepage]{revtex4-1}
+\documentclass[12pt,aps,prd,onecolumn,nofootinbib,notitlepage]{revtex4-1}
 \usepackage{amsmath,amssymb,amstext,graphicx,color,xfrac,braket,accents,tabulary,booktabs,xcolor,bbold}
 \usepackage[T1]{fontenc}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+\usepackage{microtype}
+
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 \begin{document}
-\baselineskip=13pt
 \hfill CALT-TH-2020-40
 \hfill
 
@@ -29,7 +67,6 @@
 \newcommand{\psidu}{\psi_{\downarrow\uparrow}}
 \newcommand{\psidd}{\psi_{\downarrow\downarrow}}
 
-
 \title{Energy Non-Conservation in Quantum Mechanics}
 \author{Sean M. Carroll$^1$ and Jackie Lodman$^2$}
 \affiliation{$^1$Walter Burke Institute for Theoretical Physics, California Institute of Technology, 
@@ -45,6 +82,8 @@ It should therefore be possible to experimentally measure violations of conserva
 \end{abstract}
 
 \maketitle
+
+\newpage
 
 \section{Introduction}
 
