--- a/hep-ph-0503172/EWSB1.tex
+++ b/hep-ph-0503172/EWSB1.tex
@@ -28,6 +28,8 @@ bookmarksopenlevel=10
 \def\green{\color{ForestGreen}}
 %
 
+\def\underline{\relax}
+
 \usepackage[small]{titlesec}
 \usepackage{cite}
 
