--- a/hep-ph-0503172/sm1/sec1.tex
+++ b/hep-ph-0503172/sm1/sec1.tex
@@ -32,19 +32,17 @@ the right--handed fermions are in weak isosinglets\footnote{Throughout this
 review, we will assume that the neutrinos, which do not play any role here, are
 massless and appear only with their left--handed components.}
 \beq
-I_f^{3L,3R}= \pm \frac{1}{2}, 0  \, : \, \begin{array}{l} 
-L_1= \left( \begin{array}{c} \nu_e \\ e^- \end{array} \right)_L, \ e_{R_1}=
-e^-_R  \, , \ Q_1= \left( \begin{array}{c} u \\ d \end{array} \right)_L,\ 
-u_{R_1}=u_R \, ,\ d_{R_1}=d_R \\ 
+I_f^{3L,3R}= \pm \frac{1}{2}, 0  : \begin{array}{l} 
+L_1= \left( \begin{array}{c} \nu_e \\ e^- \end{array} \right)_L, \, e_{R_1}=
+e^-_R  , \,Q_1= \left( \begin{array}{c} u \\ d \end{array} \right)_L,
+\, u_{R_1}=u_R ,\,d_{R_1}=d_R \\ 
 %
-L_2= \left( \begin{array}{c} \nu_\mu \\ \mu^- \end{array} \right)_L, \ 
-e_{R_2} =\mu^-_R  \, , \ Q_2= \left( \begin{array}{c} c \\ s \end{array} 
-\right)_L,\ u_{R_2}=c_R\ ,\ d_{R_2} = s_R \\ 
+L_2= \left( \begin{array}{c} \nu_\mu \\ \mu^- \end{array} \right)_L, \, e_{R_2} =\mu^-_R, \, Q_2= \left( \begin{array}{c} c \\ s \end{array} 
+\right)_L, \, u_{R_2}=c_R , \, d_{R_2} = s_R \\ 
 %
-L_3= \left( \begin{array}{c} \nu_\tau \\ \tau^- \end{array} \right)_L, \ 
-e_{R_3}=\tau^-_R  \, , \ Q_3= \left( \begin{array}{c} t \\ b \end{array} \right)_L,\ u_{R_3}=t_R\ ,\ d_{R_3}= b_R \\ 
+L_3= \left( \begin{array}{c} \nu_\tau \\ \tau^- \end{array} \right)_L, 
+\, e_{R_3}=\tau^-_R , \, Q_3= \left( \begin{array}{c} t \\ b \end{array} \right)_L, \,u_{R_3}=t_R ,\,d_{R_3}= b_R \\ 
 \end{array}
-\nonumber
 \eeq
 The fermion hypercharge, defined in terms of the third component of the weak 
 isospin $I_f^3$ and the electric charge $Q_f$ in units of the proton charge 
