--- a/hep-ph-0608010/Kitz.tex
+++ b/hep-ph-0608010/Kitz.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt]{cernrep}
+\documentclass[12pt]{article}
 \usepackage{graphicx}
 
 \usepackage{epsf}
@@ -19,7 +19,47 @@
 \newcommand{\gsim}{
 \mathrel{\hbox{\rlap{\hbox{\lower4pt\hbox{$\sim$}}}\hbox{$>$}}}}
 
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+\parskip 0pt
+\date{1 Aug 2006}
 
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 \begin{document}
 
 
@@ -110,7 +150,7 @@ July 2006
 
 \title{FLAVOUR PHYSICS AND CP VIOLATION}
 \author{Robert Fleischer}
-\institute{CERN, Geneva, Switzerland}
+%\institute{CERN, Geneva, Switzerland}
 \maketitle
 \begin{abstract}
 The starting point of these lectures is an introduction to the weak 
@@ -145,7 +185,7 @@ $B$-decay studies at the LHC.
 \setcounter{equation}{0}
 %
 %
-%
+
 The history of CP violation, i.e.\ the non-invariance of the weak interactions
 with respect to a combined charge-conjugation (C) and parity (P) 
 transformation, goes back to the year 1964, where this phenomenon was
