--- a/hep-ph-9806471/rnewlh.tex
+++ b/hep-ph-9806471/rnewlh.tex
@@ -1,6 +1,7 @@
    
-\documentstyle[11pt,epsf,rotate]{article}
-\input{psfig}
+\documentclass[12pt,rotate]{article}
+\usepackage{psfig}
+\usepackage{epsf}
 
 \def\theequation{\thesection.\arabic{equation}}
 
@@ -652,7 +653,7 @@ Section 15 offers a brief outlook of the field of weak decays
  for the next ten years.
 Finally in section 16  a few general messages 
  on the Les Houches summer school 1997 will be made.
-\subsection{Whatïs New in these Lectures}
+\subsection{What's New in these Lectures}
 In writing these lectures I benefited enormously from a review on NLO
 QCD corrections to weak decays written in collaboration with Gerhard 
 Buchalla and
